fixed slider.| visible cart, when user login.| new animations cards,

--- a/assets/src/style/food.scss
+++ b/assets/src/style/food.scss
@@ -23,6 +23,7 @@ body {
   //header
   header {
     padding: 2.25rem 0;
+    background-color: #ffffff;
     nav {
       display: flex;
       justify-content: space-between;
@@ -59,7 +60,10 @@ body {
             color: #8C8C8C;;
           }
         }
-        .btn-secondary, .btn-primary, .btn-logout {
+        .cart-btn {
+          display: none;
+        }
+        .btn-logout, .cart-btn, .btn-auth {
           @include for-size(phone-portrait-up) {
             font-size: 100%;
             border: none;
@@ -91,30 +95,46 @@ body {
     padding-bottom: 6rem;
     background: linear-gradient(180deg, rgba(245, 245, 245, 0) 1.04%, #F5F5F5 100%);
     .slideshow-container {
-      border-radius: 10px;
-      .main-slider {
-        background-color: #FFF1B8;
-        padding: 7% 6%;
-        background-image: url("../img/banner.png");
-        background-repeat: no-repeat;
-        background-position: right;
-        box-shadow: 0px 7px 12px rgba(158, 158, 163, 0.1);
-        user-select: none;
-        color: $banner-color-font;
-        -webkit-background-size: contain;
-        background-size: contain;
-        h1 {
-          margin-bottom: 1rem;
+      .mySlides {
+        .main-slider {
+          padding: 7% 6%;
+          border-radius: 10px;
+          background-image: url("../img/banner.png");
+          background-repeat: no-repeat;
+          background-position: right;
+          box-shadow: 0px 7px 12px rgba(158, 158, 163, 0.1);
+          user-select: none;
+          color: $banner-color-font;
+          -webkit-background-size: contain;
+          background-size: contain;
+          h1 {
+            margin-bottom: 1rem;
+          }
+          @include for-size(tablet-portrait-up) {
+            font-size: 1.75vw;
+          }
+          @include for-size(phone-landscape-up){
+            font-size: 0.85rem;
+          }
+          @include for-size(phone-portrait-up) {
+            background-position-x: calc(47vw - 100%);
+            background-size: 32rem;
+          }
         }
-        @include for-size(tablet-portrait-up) {
-          font-size: 1.75vw;
+      }
+      :first-child {
+        .slider {
+          background-color: $first-slide;
         }
-        @include for-size(phone-landscape-up){
-          font-size: 0.85rem;
+      }
+      :nth-child(2) {
+        .slider {
+          background-color: $second-slide;
         }
-        @include for-size(phone-portrait-up) {
-          background-position-x: calc(47vw - 100%);
-          background-size: 32rem;
+      }
+      :nth-child(3) {
+        .slider {
+          background-color: $third-slide;
         }
       }
     }
@@ -285,6 +305,22 @@ body {
             flex-direction: column;
             gap: 1rem;
           }
+        }
+      }
+    }
+    .modal-cart {
+      .modal-footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .modal_price-tag {
+          font-weight: $font-bold;
+          color: #ffffff;
+          background-color: #333333;
+          padding: .7rem;
+          -webkit-border-radius:3px;
+          -moz-border-radius: 3px;
+          border-radius: 3px;
         }
       }
     }
