--- a/assets/src/style/variables.scss
+++ b/assets/src/style/variables.scss
@@ -1,11 +1,17 @@
 /*colors*/
-$body-color:                #ffffff;
-$gray-border:              #D9D9D9;
-$banner-color-font:            #302C34;
-$color-rating: #FFC107;
-$color-gray:  #8C8C8C;
-$color-blue:  #40A9FF;
-$warning-color: #e20020;
+$body-color:                  #ffffff;
+$gray-border:                 #D9D9D9;
+$banner-color-font:           #302C34;
+$color-rating:                #FFC107;
+$color-gray:                  #8C8C8C;
+$color-blue:                  #40A9FF;
+$warning-color:               #e20020;
+
+
+/*slide colors*/
+$first-slide:                 #009fff4a;
+$second-slide:                #FFF1B8;
+$third-slide:                 #00ff103b;
 
 //fonts
 $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" ;
